--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -66,6 +66,7 @@
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)..\SDK\SC2API_Binary_vs2017\lib\$(Configuration);$(SolutionDir)..\SDK\CGAL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;imm32.lib;version.lib;civetweb.lib;libprotobufd.lib;sc2libd.lib;sc2apid.lib;sc2protocold.lib;sc2rendererd.lib;sc2utilsd.lib;SDL2.lib;CGAL-vc140-mt-gd-4.10.lib;CGAL_Core-vc140-mt-gd-4.10.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -89,13 +90,24 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)..\SDK\SC2API_Binary_vs2017\lib\$(Configuration);$(SolutionDir)..\SDK\CGAL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;imm32.lib;version.lib;civetweb.lib;libprotobuf.lib;sc2lib.lib;sc2api.lib;sc2protocol.lib;sc2renderer.lib;sc2utils.lib;SDL2.lib;CGAL-vc140-mt-4.10.lib;CGAL_Core-vc140-mt-4.10.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\bot.h" />
+    <ClInclude Include="include\console.h" />
+    <ClInclude Include="include\exception.h" />
+    <ClInclude Include="include\hive_types.h" />
+    <ClInclude Include="include\sc2_forward.h" />
     <ClInclude Include="include\stdafx.h" />
+    <ClInclude Include="include\subsystem.h" />
     <ClInclude Include="include\targetver.h" />
+    <ClInclude Include="include\utilities.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\bot.cpp" />
+    <ClCompile Include="src\console.cpp" />
+    <ClCompile Include="src\exception.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
