--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -97,7 +97,9 @@
     <ClInclude Include="include\bot.h" />
     <ClInclude Include="include\console.h" />
     <ClInclude Include="include\exception.h" />
+    <ClInclude Include="include\hive_math.h" />
     <ClInclude Include="include\hive_types.h" />
+    <ClInclude Include="include\hive_vector2.h" />
     <ClInclude Include="include\sc2_forward.h" />
     <ClInclude Include="include\stdafx.h" />
     <ClInclude Include="include\subsystem.h" />
