--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="include\bot.h" />
     <ClInclude Include="include\console.h" />
     <ClInclude Include="include\exception.h" />
+    <ClInclude Include="include\hive_array2.h" />
     <ClInclude Include="include\hive_math.h" />
     <ClInclude Include="include\hive_types.h" />
     <ClInclude Include="include\hive_vector2.h" />
