Add initial AI goals boilerplate

--- a/hivemind/hivemind.vcxproj.filters
+++ b/hivemind/hivemind.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="include\ai_goals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\brain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ai_agent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -87,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ai_goals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\brain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
