--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="include\subsystem.h" />
     <ClInclude Include="include\targetver.h" />
     <ClInclude Include="include\utilities.h" />
+    <ClInclude Include="include\workers.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ai_finitestatemachine.cpp" />
@@ -130,6 +131,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\workers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
