--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="include\hive_types.h" />
     <ClInclude Include="include\hive_vector2.h" />
     <ClInclude Include="include\map.h" />
+    <ClInclude Include="include\map_analysis.h" />
     <ClInclude Include="include\messaging.h" />
     <ClInclude Include="include\player.h" />
     <ClInclude Include="include\sc2_forward.h" />
@@ -126,6 +127,7 @@
     <ClCompile Include="src\exception.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\map.cpp" />
+    <ClCompile Include="src\map_analysis.cpp" />
     <ClCompile Include="src\messaging.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\playermanager.cpp" />
