--- a/hivemind/hivemind.vcxproj.filters
+++ b/hivemind/hivemind.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="include\map_analysis.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\hive_polygon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
