--- a/hivemind/hivemind.vcxproj.filters
+++ b/hivemind/hivemind.vcxproj.filters
@@ -40,9 +40,6 @@
     <Filter Include="Source Files\Algorithm">
       <UniqueIdentifier>{0dbf64ae-4f02-4e92-ab86-fda0175de56c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Map">
-      <UniqueIdentifier>{f4e1f4b9-b533-4735-bbdf-84c6c9243e83}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Systems">
       <UniqueIdentifier>{9196863c-5f4d-4d3f-8f35-d3ae6af1653d}</UniqueIdentifier>
     </Filter>
@@ -51,6 +48,9 @@
     </Filter>
     <Filter Include="Source Files\Brain">
       <UniqueIdentifier>{9a34a9bf-d7ae-45fb-855b-85f5d075af48}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Brain\Map">
+      <UniqueIdentifier>{f4e1f4b9-b533-4735-bbdf-84c6c9243e83}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -168,10 +168,10 @@
       <Filter>Source Files\Algorithm</Filter>
     </ClCompile>
     <ClCompile Include="src\map.cpp">
-      <Filter>Source Files\Map</Filter>
+      <Filter>Source Files\Brain\Map</Filter>
     </ClCompile>
     <ClCompile Include="src\map_analysis.cpp">
-      <Filter>Source Files\Map</Filter>
+      <Filter>Source Files\Brain\Map</Filter>
     </ClCompile>
     <ClCompile Include="src\console.cpp">
       <Filter>Source Files\Systems</Filter>
@@ -195,7 +195,7 @@
       <Filter>Source Files\Algorithm</Filter>
     </ClCompile>
     <ClCompile Include="src\regiongraph.cpp">
-      <Filter>Source Files\Map</Filter>
+      <Filter>Source Files\Brain\Map</Filter>
     </ClCompile>
     <ClCompile Include="src\baselocation.cpp">
       <Filter>Source Files\Systems</Filter>
@@ -214,6 +214,12 @@
     </ClCompile>
     <ClCompile Include="src\brain_scouting.cpp">
       <Filter>Source Files\Brain</Filter>
+    </ClCompile>
+    <ClCompile Include="include\intelligence.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="src\intelligence.cpp">
+      <Filter>Source Files\Systems</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
